# CNE

./: .devcontainer  .gitignore  README.md  devcontainer.json  pyproject.toml
app/routers/: export.py  process.py  report.py  resolve.py  upload.py
app/services/: context_extractor.py  model_b_spacy.py  normalizer.py  reporter.py
cne_mvp_v4/: requirements.txt
cne_mvp_v4/app/: main.py
cne_mvp_v4/app/models/: schemas.py
cne_mvp_v4/app/routers/: artifacts.py  models.py  reconcile.py  resolve.py  validate.py
cne_mvp_v4/app/services/: dtmnfr_mapper.py  edital_parser.py  exporter.py  extractor_a.py  extractor_b.py  reconciler.py  storage.py  utils.py  validator.py
cne_mvp_v4/app/templates/: file_detail.html  index.html
cne_mvp_v4/metadata/: codigos_ine.csv  metadata.json
frontend/: app.js  index.html  manifest.json  styles.css  sw.js
scripts/: run_dashboard.py
src/dashboard/: __init__.py  app.py  progress.py
src/exporter/: __init__.py  csv_export.py
src/ingestion/: __init__.py  service.py
src/matching/: __init__.py  comparator.py
src/ocr/: __init__.py  pipeline.py
src/operators/: __init__.py  operator_a.py  operator_b.py
src/review/: __init__.py  service.py  ui.py
tests/: test_comparator.py  test_csv_exporter.py  test_ocr_pipeline.py  test_operator_a.py  test_operator_b.py  test_pipeline_orchestrator.py  test_review_service.py
