[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cne"
version = "0.1.0"
description = "CNE dashboard and services"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pymupdf>=1.22.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dashboard = ["**/*"]
